Criei o hero e o Bem vindos

--- a/Home.html
+++ b/Home.html
@@ -17,8 +17,7 @@
             <!--LOGO-->
             <div class="flex lg:flex-1">
                 <a href="#" class="-m-1.5 p-1.5">
-                    <img src="Logo Vitta.png" alt=""
-                    class="h-8 w-auto" />
+                    <img src="Logo Vitta.png" alt="" class="h-8 w-auto" />
                 </a>
             </div>
             <!--LOGO-->
@@ -52,8 +51,7 @@
                         class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-gray-900 p-6 sm:max-w-sm sm:ring-1 sm:ring-gray-100/10">
                         <div class="flex items-center justify-between">
                             <a href="#" class="-m-1.5 p-1.5">
-                                <img src="Logo Vitta.png"
-                                    alt="" class="h-8 w-auto" />
+                                <img src="Logo Vitta.png" alt="" class="h-8 w-auto" />
                             </a>
                             <button type="button" command="close" commandfor="mobile-menu"
                                 class="-m-2.5 rounded-md p-2.5 text-gray-400">
@@ -67,11 +65,12 @@
                         <div class="mt-6 flow-root">
                             <div class="-my-6 divide-y divide-white/10">
                                 <div class="space-y-2 py-6">
-                            
+
                                     <a href="#"
                                         class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-white/5">Produtos</a>
                                     <a href="#"
-                                        class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-white/5">Sobre nós</a>
+                                        class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-white/5">Sobre
+                                        nós</a>
                                     <a href="#"
                                         class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-white/5">Contato</a>
                                     <a href="#"
@@ -90,6 +89,76 @@
         </el-dialog>
     </header>
     <!--CABEÇALHO-->
+
+    <section class="bg-gray-100 py-16">
+        <div class="max-w-screen-lg mx-auto text-center px-6">
+            <!-- Imagem Centralizada -->
+            <div class="mb-6">
+                <img src="https://via.placeholder.com/300" alt="Imagem de boas-vindas" class="mx-auto rounded-full">
+            </div>
+
+            <!-- Mensagem de Boas-vindas -->
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Bem-vindo ao nosso site!</h2>
+            <p class="text-lg text-gray-600 mb-6">Aqui você encontra os melhores produtos para sua loja online. Vamos
+                começar as compras?</p>
+
+            <!-- Botão -->
+            <a href="#produtos"
+                class="inline-block bg-indigo-600 text-white text-lg px-8 py-3 rounded-lg hover:bg-indigo-700 transition duration-300">Comece
+                a Comprar</a>
+        </div>
+    </section>
+
+
+
+    <!--FOOTER-->
+    <footer class="bg-gray-800 text-white py-8">
+        <div class="max-w-screen-xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-12">
+            <!-- Seção de informações da loja -->
+            <div>
+                <h3 class="text-2xl font-semibold mb-4">Contato</h3>
+                <p class="text-sm">Email: contato@lojaonline.com</p>
+                <p class="text-sm">Telefone: (11) 98765-4321</p>
+            </div>
+
+            <!-- Links de navegação -->
+            <div>
+                <h3 class="text-2xl font-semibold mb-4">Navegação</h3>
+                <ul class="space-y-2">
+                    <li><a href="#" class="text-sm hover:text-indigo-400">Home</a></li>
+                    <li><a href="#" class="text-sm hover:text-indigo-400">Produtos</a></li>
+                    <li><a href="#" class="text-sm hover:text-indigo-400">Sobre</a></li>
+                    <li><a href="#" class="text-sm hover:text-indigo-400">Contato</a></li>
+                </ul>
+            </div>
+
+            <!-- Redes sociais -->
+            <div>
+                <h3 class="text-2xl font-semibold mb-4">Siga-nos</h3>
+                <div class="flex space-x-4">
+                    <a href="#" class="text-2xl text-white hover:text-indigo-400">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="text-2xl text-white hover:text-indigo-400">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" class="text-2xl text-white hover:text-indigo-400">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" class="text-2xl text-white hover:text-indigo-400">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Copyright -->
+        <div class="bg-gray-900 py-4 text-center text-sm">
+            <p>&copy; 2025 Loja Online. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+    <!--FOOTER-->
+
 </body>
 
 </html>
